<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rilevatore di cadute</string>
    <string name="action_settings">Settings</string>
    <string name="nuovaSessione">Nuova Sessione</string>
    <string name="delete">Cancella</string>
    <string name="rename">Rinomina</string>
    <string name="preference">Preferenze</string>
    <string name="textDurata">Durata--></string>
    <string name="textCadute">Cadute:</string>    
    <string name="title_activity_second">Dettagli</string>
    <string name="inizio">Inizio Sessione</string>
    <string name="txDataInizio">Data Inizio-></string>
    <string name="txOraInizio">Ora Inizio-></string>
    <string name="txLista">Lista cadute</string>
    <string name="caduta">Caduta</string>
    <string name="spazio"></string>
    <string name="DataCaduta">Data Caduta:</string>
    <string name="OraCaduta">Ora Caduta:</string>
    <string name="DataAvvenuta">Data Avvenuta:</string>
    <string name="OraAvvenuta">Ora Avvenuta:</string>
    <string name="notificaOk">Successo notifica</string>
    <string name="title_activity_third">Nuova Sessione</string>
    <string name="sessioneInCorso">Sessione in corso</string>
    <string name="textSessione">Nome sessione:</string>
    <string name="startTx">Start</string>
    <string name="pauseTx">Pause</string>
    <string name="stopTx">Stop</string>
    <string name="title_activity_fourth">Dettagli caduta</string>
    <string name="latitude">Latitudine:</string>
    <string name="longitude">Longitudine:</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_fifth">Preferenze</string>
    <string name="simpleRateTx">Frequenza di campionamento:</string>
    <string name="maxDuratSessTx">Massima durata sessione:</string>
    <string name="emailListTx">Lista e-mail</string>
    <string name="alarmTx">Allarme</string>    
    <string name="title_activity_delete">Elimina Sessione</string>
    <string name="title_activity_sixth">Sessione In Corso</string> 
    <string name="mostra">Mostra Sessione</string>    
    <string name="xTx">Asse x: </string>
    <string name="yTx">Asse y: </string>
    <string name="zTx">Asse z: </string>      
    <string name="title_activity_delete_fall">Elimina caduta</string>
    <string name="thumbnail">Thumbnail</string>     
    
</resources>