<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.unipd.dei.rilevatoredicadute.Fifth" > 
      	
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/simpleRateTx"
		android:textSize="20sp"
        />
		
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/maxDuratSessTx"
	    android:textSize="20sp"
	    />
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/emailListTx"
	    android:textSize="20sp"
	    />
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/alarmTx"
	    android:textSize="20sp"
	    />
</LinearLayout>