<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.unipd.dei.rilevatoredicadute.SessioneCorrente" >
    
    <TextView
        android:id="@+id/nomeSessioneTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textSessione"
        android:textSize="20sp"  
        />
    
    <TextView
        android:id="@+id/TestoSessCurr"
        android:layout_toRightOf="@+id/nomeSessioneTx"
        android:layout_toEndOf="@+id/nomeSessioneTx"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:textStyle="bold"        
        />

    <ImageButton
        android:id="@+id/start"
        android:contentDescription="@string/startTx"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/pause"
        android:layout_alignStart="@+id/pause"
        android:layout_below="@+id/nomeSessioneTx"
        android:background="@android:color/transparent"
        android:src="@drawable/playbutton" 
        />

    <ImageButton
        android:id="@+id/pause"
        android:contentDescription="@string/pauseTx"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignRight="@+id/nomeSessioneTx"
        android:layout_alignEnd="@+id/nomeSessioneTx"
        android:layout_alignTop="@+id/stop"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"
        android:background="@android:color/transparent"
        android:src="@drawable/pausebutton" 
        />

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/TestoSessCurr"
        android:layout_alignStart="@+id/TestoSessCurr"
        android:layout_alignTop="@+id/start"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/stopTx"
        android:background="@android:color/transparent"
        android:src="@drawable/stopbutton" />
    
        <Chronometer
        android:id="@+id/chronometer"
        android:format="%s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_below="@+id/start"/>
        
        <TextView 
        android:id="@+id/xTextS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chronometer"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/xTx"
        android:textSize="24sp"
        android:textColor="#DF0101"
        />
    
	   <TextView 
	       android:id="@+id/xDataS"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/chronometer"
	       android:layout_toRightOf="@+id/xTextS"
	       android:layout_toEndOf="@+id/xTextS"
	       android:layout_marginRight="5dp"
	       android:layout_marginEnd="5dp"
	       android:textSize="24sp"
	       android:textColor="#DF0101"
	       />
	   
	   <TextView 
	       android:id="@+id/yTextS"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/xTextS"
	       android:layout_marginRight="5dp"
	       android:layout_marginEnd="5dp"
	       android:text="@string/yTx"
	       android:textSize="24sp"
	       android:textColor="#01DF01"
	       />
	   
	   <TextView 
	       android:id="@+id/yDataS"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/xTextS"
	       android:layout_toRightOf="@+id/yTextS"
	       android:layout_toEndOf="@+id/yTextS"
	       android:layout_marginRight="15dp"
	       android:layout_marginEnd="15dp"
	       android:textSize="24sp"
	       android:textColor="#01DF01"
	       />
	   
	   <TextView 
	       android:id="@+id/zTextS"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/yTextS"
	       android:layout_marginRight="5dp"
	       android:layout_marginEnd="5dp"
	       android:text="@string/zTx"
	       android:textSize="24sp"
	       android:textColor="#013ADF"
	       />
	   
	    <TextView 
	       android:id="@+id/zDataS"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_below="@+id/yTextS"
	       android:layout_toRightOf="@+id/zTextS"
	       android:layout_toEndOf="@+id/zTextS"
	       android:textSize="24sp"
	       android:textColor="#013ADF"
	       />
		       
		<LinearLayout android:id="@+id/linearLayout1" 
		    android:orientation="vertical" 
		    android:layout_width="match_parent" 
		    android:layout_height="match_parent" 
		    android:layout_alignTop ="@+id/zTextS" 
		    android:layout_marginTop="24sp"
		    tools:context="it.unipd.dei.rilevatoredicadute.Second">
		    
			<ListView android:id="@+id/listViewCadute" 
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:layout_marginTop="10dp" 
			    android:layout_marginLeft="5dp" 
			    android:layout_marginRight="5dp" 
			    android:layout_marginBottom="5dp" 
			    android:divider="#ff888888" 
			    android:dividerHeight="1dp">   
			</ListView>
			
			</LinearLayout>

</RelativeLayout>